syntax = "proto3";
package pinger;

option php_namespace = "GRPC\\Pinger";
option php_metadata_namespace = "GRPC\\GPBMetadata";

service Pinger {
    rpc ping (PingRequest) returns (PingResponse) {
    }
}

message PingRequest {
    string url = 1;
}

message PingResponse {
    int32 status_code = 1;
}
